# CPP-geocache-ml-eviction

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cache/: eviction.hpp  key_stats.hpp  logger.hpp  lru_cache.hpp  metrics.hpp  timer.hpp
ml_sidecar/: app.py  train.py
origin/: app.py
server/: main.cpp
tools/: preload.py
